Fixed overflow of tablet

--- a/css/site.css
+++ b/css/site.css
@@ -37,7 +37,7 @@
 
 .tablet {
 	position: absolute;
-	right: -200px;
+	right: -250px;
 	top: 0;
 }
 
